<resources>
    <string name="app_name">ToDo App C40 G Sat</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="todo_list">Todo List</string>
    <string name="add_new_task">Add new Task</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="enter_task_desc">Enter task description</string>
    <string name="add_task">Add Task</string>
    <string name="select_task_date">Select Task Date</string>
    <string name="required">Required</string>
    <string name="language">Language</string>
    <string name="language_list">Languages</string>
    <string name="mode">Mode</string>
    <string name="mode_list">Modes</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="modes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

</resources>